# project-lightsaber

./: Cargo.toml  README.md  RELEASES.md  x86_64-unknown-lightsaber.json
.cargo/: kernel.ld
lightsaber_bootloader/: Cargo.toml
lightsaber_bootloader/src/: lib.rs  load.rs  logger.rs  main.rs  paging.rs
lightsaber_buildsystem/: Cargo.toml
lightsaber_graphics/: Cargo.toml
lightsaber_kernel/: Cargo.toml
lightsaber_kernel/src/: logger.rs  main.rs  renderer.rs  time.rs  tls.rs  unwind.rs
lightsaber_kernel/src/architecture/: mod.rs
lightsaber_kernel/src/architecture/amd64/: mod.rs
lightsaber_kernel/src/architecture/amd64/acpi/: mod.rs
lightsaber_kernel/src/architecture/amd64/gdt/: access_flags.rs  access_type.rs  entry_flags.rs  mod.rs  segment_selector.rs
lightsaber_kernel/src/architecture/amd64/interrupts/: mod.rs
lightsaber_kernel/src/architecture/amd64/interrupts/exceptions/: aligncheck.rs  bound.rs  breakpoint.rs  debug.rs  devunavail.rs  divide_zero.rs  doublefault.rs  fp_except.rs  general_protfault.rs  invop.rs  invtss.rs  machinecheck.rs  mod.rs  nonmaskable.rs  overflow.rs  page_fault.rs  security.rs  seg_not_present.rs  simdfp_except.rs  stackseg.rs  virtfault.rs
lightsaber_kernel/src/architecture/amd64/interrupts/idt/: entry_flags.rs  mod.rs  registers.rs  stack_frame.rs
lightsaber_kernel/src/architecture/amd64/memory/: heap.rs  mod.rs  paging.rs  pti.rs
lightsaber_kernel/src/drivers/: mod.rs
lightsaber_kernel/src/drivers/pci/: mod.rs  type.rs  type_impl.rs
lightsaber_kernel/src/drivers/uart16550/: line_status.rs  mod.rs
(+30 files in other folders)
