[package]
name = "lightsaber_kernel"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bitflags]
version = "1.2.1"

[dependencies.goblin]
version = "0.4.1"
default-features = false
features = [ "elf32", "elf64" ]

[dependencies.linked_list_allocator]
version = "0.9.0"

[dependencies.lightsaber_bootloader]
path = "../lightsaber_bootloader"

[dependencies.lightsaber_graphics]
path = "../lightsaber_graphics"

[dependencies.lightsaber_util]
path = "../lightsaber_util"

[dependencies.log]
version = "0.4.14"

[dependencies.rlibc]
version = "1.0.0"

[dependencies.spin]
version = "0.9.0"

[dependencies.x86_64]
version = "0.14.3"
